--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-ul, ol {
-  margin: 0; 
-  padding-left: 40px; 
-  list-style-position: outside; 
-}
-
-ul ul, ol ol {
-  margin-top: 0;
-  padding-left: 20px; 
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
